--- a/src/app/weather/forecast/forecast.component.html
+++ b/src/app/weather/forecast/forecast.component.html
@@ -1,4 +1,11 @@
-<div *ngFor="let foreCast of forecastData$ | async">
-  {{ foreCast.temp | number: "1.0-0" }}°C
-  {{ foreCast.dateString | date: "E" }}
-</div>
+<ul class="list-group">
+  <li
+    *ngFor="let foreCast of forecastData$ | async"
+    class="weather-item list-group-item"
+  >
+    <p class="temp">{{ foreCast.temp | number: "1.0-0" }}°C</p>
+    <p class="day">
+      {{ foreCast.dateString | date: "E" }}
+    </p>
+  </li>
+</ul>
